# informatics

./: Cargo.toml  README.md
.github/workflows/: general.yml  rust-clippy.yml
src/: lib.rs  main.rs
src/algorithms/: heapsort.rs  huffman_encoding.rs  insertion_sort.rs  longest_common_subsequence.rs  mod.rs  quicksort.rs
src/data_structures/: binary_search_tree.rs  mod.rs  red_black_tree.rs
