[package]
author = "rudolf slusarski"
categories = ["algorithms", "data-structures"]
edition = "2021"
name = "informatics"
readme = "README.md"
repository = "https://github.com/rudolf-slusarski/informatics"
version = "0.1.0"

[dependencies]
bit-vec = "0.6.3"
bitstream-io = "1.3.0"
colour = "0.6.0"
rand = "0.8.4"
